sfSandBoxCode/force-app/main/default/objects/Employee_Job_Information__c/Employee_Job_Information__c.object-meta.xml
<CustomObject>
    <description>Employee Job Information</description>
    <label>Employee Job Information</label>
    <nameField>
        <displayFormat>JI-{000000}</displayFormat>
        <label>Employee Job Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Job Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>