sfSandBoxCode/force-app/main/default/objects/Employee_Job_Information__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Company</description>
    <inlineHelpText>Company</inlineHelpText>
    <label>Company</label>
    <referenceTo>c2g__codaCompany__c</referenceTo>
    <relationshipLabel>Employee Job Information</relationshipLabel>
    <relationshipName>Employee_Job_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>