sfSandBoxCode/force-app/main/default/objects/Employee_Job_Information__c/fields/Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate of current role</description>
    <inlineHelpText>Flag to indicate of current role</inlineHelpText>
    <label>Current Role</label>
    <type>Checkbox</type>
</CustomField>