sfSandBoxCode/force-app/main/default/objects/Employee_Job_Information__c/fields/Date_To__c.field-meta.xml
<CustomField>
    <fullName>Date_To__c</fullName>
    <description>Date to which record is effective</description>
    <inlineHelpText>Date to which record is effective</inlineHelpText>
    <label>Date To</label>
    <type>Date</type>
</CustomField>