sfSandBoxCode/force-app/main/default/objects/Employee_Job_Information__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Department</description>
    <inlineHelpText>Department</inlineHelpText>
    <label>Department</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipLabel>Employee Job Information</relationshipLabel>
    <relationshipName>Employee_Job_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>