sfSandBoxCode/force-app/main/default/objects/Employee_Job_Information__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Effective Date</description>
    <inlineHelpText>Effective Date</inlineHelpText>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>