sfSandBoxCode/force-app/main/default/objects/Employee_Job_Information__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Job Title</description>
    <inlineHelpText>Job Title</inlineHelpText>
    <label>Job Title</label>
    <referenceTo>Employee_Role__c</referenceTo>
    <relationshipLabel>Employee Job Information</relationshipLabel>
    <relationshipName>Employee_Job_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>