sfSandBoxCode/force-app/main/default/objects/Employee_Job_Information__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Dimension 2</description>
    <inlineHelpText>Dimension 2</inlineHelpText>
    <label>Location</label>
    <referenceTo>c2g__codaDimension2__c</referenceTo>
    <relationshipLabel>Employee Job Information</relationshipLabel>
    <relationshipName>Employee_Job_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>