sfSandBoxCode/force-app/main/default/objects/Employee_Job_Information__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reports To</description>
    <inlineHelpText>Reports To</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Job Information</relationshipLabel>
    <relationshipName>Employee_Job_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>