sfSandBoxCode/force-app/main/default/objects/Employee_Job_Information__c/fields/Sanergy_Department_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Department_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Department Unit</description>
    <inlineHelpText>Department Unit</inlineHelpText>
    <label>Sanergy Department Unit</label>
    <referenceTo>Sanergy_Department_Unit__c</referenceTo>
    <relationshipLabel>Employee Job Information</relationshipLabel>
    <relationshipName>Job_Information_Dept_Unit</relationshipName>
    <type>Lookup</type>
</CustomField>